# mcpserverexample

./: README.md  main.py  pyproject.toml
src/mcp3.egg-info/: PKG-INFO  SOURCES.txt
src/mcpserver/: deployment.py
