[project]
name = "mcp3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.16.0",
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backent = "setuptools.build_meta"

[tools.setuptools]
package-dir = {""="src"}

[tool.setuptools.packages.find]
where = ["src "]
